--- a/app/views/actors/show.html.erb
+++ b/app/views/actors/show.html.erb
@@ -1,4 +1,5 @@
 <h2 class='text-center'><%= @actor.name %></h2>
+<p> <%= link_to "edit", edit_actor_path, class: 'btn btn-primary' %> </p>
 <hr>
 <br>
 <div class="row">
